# MyRepo

./: README  beautiful_soup_test
beautifulsoup4-4.12.3/: .gitignore  pyproject.toml  tox.ini
beautifulsoup4-4.12.3/doc.es/source/: conf.py  index.rst
beautifulsoup4-4.12.3/doc.ptbr/source/: index.rst
beautifulsoup4-4.12.3/doc.ru/source/: bs4ru.rst
beautifulsoup4-4.12.3/doc.zh/source/: conf.py  index.rst
beautifulsoup4-4.12.3/doc/source/: conf.py  index.rst
beautifulsoup4-4.12.3/scripts/: demonstrate_parser_differences.py
