[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautifulsoup4"
dynamic = ["version"]
description = "Screen-scraping library"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6.0"
authors = [
    { name = "Leonard Richardson", email = "leonardr@segfault.org" },
]
keywords = [
    "HTML",
    "XML",
    "parse",
    "soup"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: SGML",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "soupsieve >1.2",
]

[project.optional-dependencies]
html5lib = [
    "html5lib",
]
lxml = [
    "lxml",
]
chardet = [
    "chardet",
]
cchardet = [
    "cchardet",
]
charset-normalizer = [
    "charset-normalizer",
]

[project.urls]
Download = "https://www.crummy.com/software/BeautifulSoup/bs4/download/"
Homepage = "https://www.crummy.com/software/BeautifulSoup/bs4/"

[tool.hatch.version]
path = "bs4/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    # The module itself, and its unit tests.
    "/bs4/**/*.py",
    "/bs4/**/*.testcase",

    # The tox build configuration
    "tox.ini",

    # Metadata.
    "/CHANGELOG",
    "/LICENSE",

    # Redundant metadata, just in case someone is depending on the
    # old filenames.
    "/COPYING.txt",
    "/NEWS.txt",

    # Scripts.
    "/test-all-versions",
    "/scripts/*.py",

    # Documentation source in various languages.
    "/doc*/Makefile",
    "/doc*/source/conf.py",
    "/doc*/source/*.rst",
    "/doc*/source/*.jpg",

    # The Japanese and Korean translations are in HTML format, not RST.
    "/doc.jp/index.html",
    "/doc.ko/*.jpg",
    "/doc.ko/index.css",
    "/doc.ko/index.html",
]


[tool.hatch.build.targets.wheel]
include = [
    # The module itself, and its unit tests.
    "/bs4/**/*.py",
    "/bs4/**/*.testcase",   
]